@@ -1,3 +1,12 @@
+Next Release
+============
+
+Bug fixes:
+
+  * mongoc_gridfs_create_file_from_stream ignored errors while writing chunks
+    to the server
+
+
 mongo-c-driver 1.12.0
 =====================
 
